--- a/realtime-v1/pom.xml
+++ b/realtime-v1/pom.xml
@@ -26,6 +26,13 @@
 
     <dependencies>
 
+        <!--敏感词检测-->
+        <dependency>
+            <groupId>com.github.houbb</groupId>
+            <artifactId>sensitive-word</artifactId>
+            <version>0.25.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
