--- a/realtime-v1/pom.xml
+++ b/realtime-v1/pom.xml
@@ -26,6 +26,19 @@
 
     <dependencies>
 
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.7.1</version>
+        </dependency>
+
         <!--敏感词检测-->
         <dependency>
             <groupId>com.github.houbb</groupId>
